Retrospective management service application